--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -3,4 +3,6 @@ $body-bg: #242424;
 $navbar-default-bg: #005197;
 $navbar-default-link-color: #fce100;
 
+$font-family-sans-serif: "Fredoka One";
+
 @import 'bootstrap' ;
