--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,8 @@
 
 <h1>Welcome to my app</h1>
-<p> <%= link_to "Sign up", "#", class: "btn btn-primary" %> </p>
+
+<p>
+  <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %> 
+</p>
+
+
