--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,9 @@
 		<%= content_tag(:div, msg, class: "alert alert-info") %>
 	<% end %>
 
-
-	<%= yield %>
-
+		<div class="container">
+			<%= yield %>
+		</div>
+		
 </body>
 </html>
