--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -2,6 +2,10 @@
 
 <div id="pins" class="transitions-enabled">
   <% @pins.each do |pin| %>
+  <% if pin.description == 'test 1 prod' %>
+  <% pin.destroy %>
+  <% end %>
+  
     <div class="box panel panel-default">
       <%= link_to image_tag(pin.image.url(:medium)), pin %>
       <div class="panel-body">
